# pi-fx

./: CMakeLists.txt  README.md  sc_synthdefs.sc
src/: dial.h  draw.h  letters.h  main.cpp  screen.h  ui.h
